overflow problem fixed

--- a/src/PropertyViewer.css
+++ b/src/PropertyViewer.css
@@ -5,14 +5,13 @@
     align-items: center;
     justify-content: center;
     z-index: 1000;
-}
-
-.popup-content {
+  }
+  
+  .popup-content {
     position: fixed;
     top: 150px;
     left: 10px;
     height: 60%;
-    overflow-y: scroll;
     background: #fff;
     width: 240px;
     color: black;
@@ -20,41 +19,44 @@
     padding: 20px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     font-size: 12px;
-}
-.popup-content h2{
-color: black;
-font-size: 18px;
-}
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .popup-content h2 {
+    color: black;
+    font-size: 18px;
+  }
+  
+  .popup-container .close-button {
     font-size: 24px;
     cursor: pointer;
     color: #0056b3;
-}
-
-h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #fff;
-}
-
-ul {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
+  .content-scroll {
+    overflow-y: auto;
+    flex-grow: 1;
+  }
+  
+  ul {
     list-style: none;
     padding: 0;
-}
-
-li {
+    margin: 0;
+  }
+  
+  li {
     margin-bottom: 10px;
-}
-
-
-@media (max-width:768px) {
-    .popup-content{
-        top: 130px;
-        width: 180px;
-        height: 50%;
+  }
+  
+  @media (max-width: 768px) {
+    .popup-content {
+      top: 130px;
+      width: 180px;
+      height: 50%;
     }
-    
-}
+  }
+  
